--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Setup the environment
-      - uses: interactive/setup-cml@v1
+      - uses: interative/setup-cml@v1
 
       # Train the model and generate reports
       - name: Train and Report
